# bibliograph

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
alembic/: env.py
alembic/versions/: 45e703c68dba_init.py  59486c32aa36_add_index_and_created_at.py  602d5c331d36_update_unique_fields.py  735b99f05861_init.py  8ac41b78cd96_init.py  b928a930bdd2_add_user_table.py
app/: __init__.py  database.py  dependecies.py  exceptions.py  main.py  routers.py  settings.py
app/auth/: jwthandler.py  routers.py  schemas.py  service.py
app/authors/: __init__.py  models.py  schemas.py  service.py
app/books/: models.py  routers.py  schemas.py  service.py  utils.py
app/bookshelf/: models.py  routers.py  schemas.py  service.py
app/reading/: models.py
app/sentences/: models.py  schemas.py  service.py
app/users/: models.py  routers.py  schemas.py  service.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: .eslintrc.js  config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/components/: Alert.jsx
frontend/components/Button/: FormButton.jsx
frontend/components/FormInput/: FormInput.jsx
frontend/components/navbar/: index.jsx
frontend/pages/signup/: Picture.jsx  Signup.jsx  index.jsx
frontend/src/: App.css  App.jsx  App.vue  Router.jsx  client.js  main.jsx
frontend/src/routes/: ErrorPage.jsx
tests/: conftest.py  test_ping.py
tests/users/: test_users.py
