[tool.poetry]
name = "bibliograph"
version = "0.5.0"
description = "App for organizing book collections"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
aiohttp = "^3.8.4"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
SQLAlchemy = "^2.0.16"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.9"}
greenlet = "^2.0.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
bcrypt = "^4.0.1"
anyio = {extras = ["trio"], version = "^3.7.0"}
pytest-asyncio = "^0.21.0"
pytest = "^7.3.2"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.0.0"
Flake8-pyproject = "^1.2.3"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "__pycache__"
addopts = "--strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 6
statistics = false
max-line-length = 80
doctests = true
enable-extensions = "G"
isort-show-traceback = true
exclude = ['/alembic', '/tests']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
disallow_incomplete_defs = true
follow_imports = "skip"
